syntax = "proto3";
package proto;
import "shared.proto";

service CategoryService {
    rpc CreateCategory(CreateCategoryRequest) returns (CreateCategoryResponse);
    rpc FindAllCategory(FindAllCategoryRequest) returns (FindAllCategoryResponse);
    
}

message CreateCategoryRequest {
    string name = 1;
    repeated string parentCategoryIds = 2;
}
message CategoryData {
    string id = 1;
    string name = 2;
    repeated string parentCategoryIds = 3;
}
message CreateCategoryResponse {
    CategoryData data = 1;
    Status status = 2;
}

message FindAllCategoryRequest {
    repeated FilterParam filterParams = 1;
    repeated SortParam sortParams = 2;
    PaginationParam paginationParam = 3;
}

message FindAllCategoryData {
    repeated CategoryData items = 1;
    PaginationMeta pagination = 2;
}
message FindAllCategoryResponse {
    FindAllCategoryData data = 1;
    Status status = 2;
}